# ralph-cli

./: .gitignore  Cargo.toml  README.md  README_zh.md
.github/workflows/: release.yml
npm/: .npmignore  index.js  install.js  package.json
ralph/: prd.json  progress.txt
src/: agent.rs  cli.rs  config.rs  error.rs  main.rs  prd.rs  templates.rs
src/commands/: config.rs  detect.rs  init.rs  install.rs  mod.rs  run.rs
src/templates/: prd_json_template.json  prd_skill.md  prompt.md  ralph_skill.md
src/tests/: agent_detection_tests.rs  cli_parsing_tests.rs  config_management_tests.rs  error_handling_tests.rs  integration_tests.rs  prd_parsing_tests.rs  project_init_tests.rs  task_execution_tests.rs
