[package]
name = "ralph"
version = "0.1.0"
edition = "2021"
description = "Ralph CLI - AI Agent aggregation tool for interactive skill installation and task management"
authors = ["Ralph Team"]
license = "MIT"

[[bin]]
name = "ralph"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.12"
console = "0.16"
dirs = "6"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
colored = "3"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
